--- a/indice.html
+++ b/indice.html
@@ -4,5 +4,8 @@
         <meta charset="UTF-8">
         <title>Hola</title>
     </head>
+    <body>
+        <h1>hola mundo</h1>
+    </body>
 </html>
 
